# sniprs

./: Cargo.toml  README.md
src/: cli.rs  config.rs  gpt_query.rs  history.rs  main.rs  renderer.rs
src/views/: history_view.rs  mod.rs
